# scrabert

./: .gitignore  CITATION.md  Cargo.toml  README.md  urls.txt
src/: bert.rs  conversation.rs  lib.rs  main.rs  qa.rs  scraper.rs  summarizer.rs
