[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
reqwest = { version = "0.11", features = ["json"] }
rust-bert = "0.18.0"
select = "0.5.0"
spinners-rs = "2.3.0"
tch = "0.7.2"
tokio = { version = "1", features = ["full"] }